add docker compose deploy
Signed-off-by: smallyunet <dev.wangyu@gmail.com>